MD Plus section fixed

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   
   <div class="container-fluid text-center  text-warning fa-1x bg-dark">
 
-    <div class="d-none d-md-inline">
+    <div class="d-none d-lg-inline">
 
       <p class="py-4">========== MD Plus ==========</p>
 
