repo name changed & link updated

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <i class="fa-brands fa-twitter text-info pe-2"></i>
         <i class="fa-brands fa-youtube text-info pe-2"></i>
         <i class="fa-brands fa-instagram text-info pe-2"></i>
-        <span class="d-none d-md-inline pe-2">#clarusway</span>
+        <span class="d-none d-md-inline pe-2">@esadakman</span>
       </div>
     </div>
   </div>
